--- a/packages/next-example/package.json
+++ b/packages/next-example/package.json
@@ -8,13 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portkey/detect-provider": "^2.0.0-alpha.2",
+    "@portkey/trader-core": "^0.0.1",
+    "aelf-sdk": "^3.4.7",
     "antd": "^5.19.3",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "@portkey/trader-core": "^0.0.1",
-    "@portkey/detect-provider": "^2.0.0-alpha.2",
-    "aelf-sdk": "^3.4.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
