--- a/packages/react-ui/tsconfig.json
+++ b/packages/react-ui/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": ["./src", "../../index.d.ts"],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "outDir": "./dist/commonjs",
     "esModuleInterop": true
   }
