--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,8 +50,6 @@
     "@portkey/trader-utils": "^0.0.1",
     "@portkey/types": "^2.7.1-alpha.4",
     "@portkey/utils": "^2.7.1-alpha.4",
-    "antd": "^5.19.4",
-    "bignumber.js": "^9.1.0",
-    "clsx": "^2.1.1"
+    "bignumber.js": "^9.1.0"
   }
 }
