--- a/packages/next-example/package.json
+++ b/packages/next-example/package.json
@@ -16,7 +16,14 @@
     "@portkey/detect-provider": "^2.0.0-alpha.2",
     "aelf-sdk": "^3.4.7",
     "@aelf-react/core": "^0.1.19",
-    "@aelf-react/types": "^0.1.10"
+    "@aelf-react/types": "^0.1.10",
+    "@aelf-web-login/utils": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-base": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-bridge": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-night-elf": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-portkey-aa": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-portkey-discover": "^0.1.3-alpha.12",
+    "@aelf-web-login/wallet-adapter-react": "^0.1.3-alpha.12"
   },
   "devDependencies": {
     "@types/node": "^20",
