--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -3,6 +3,6 @@
   "include": ["./src", "../../index.d.ts"],
   "compilerOptions": {
     "outDir": "./dist/commonjs",
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
