--- a/packages/react-ui/package.json
+++ b/packages/react-ui/package.json
@@ -2,8 +2,9 @@
   "name": "@portkey/trader-react-ui",
   "version": "0.0.1",
   "description": "",
-  "main": "./dist/commonjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "dist/index.js",
+  "types": "dist/_types/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -27,25 +28,38 @@
     "directory": "packages/accounts"
   },
   "scripts": {
-    "clean": "rm -rf dist",
-    "prebuild": "yarn clean",
-    "build": "yarn build:cjs & yarn build:esm & yarn build:types",
-    "build:cjs": "tsc && echo '{\"type\": \"commonjs\"}' > ./dist/commonjs/package.json",
-    "build:esm": "tsc --build tsconfig.esm.json && echo '{\"type\": \"module\"}' > ./dist/esm/package.json && yarn esm:fix",
-    "build:types": "tsc --build tsconfig.types.json",
-    "esm:fix": "node ../../scripts/fix-esm.js dist/esm",
-    "lint": "eslint --ext .js,.ts .",
-    "lint:fix": "eslint --fix --ext .js,.ts .",
-    "format": "prettier --write '**/*'",
+    "prebuild": "rm -rf dist",
     "start": "tsc --watch",
-    "test": "jest"
+    "lint": "eslint . --ext .tsx,.ts",
+    "lint:md": "remark . -f -q",
+    "build:clean": "rm -rf dist",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:source": "rollup --silent --config rollup.config.js",
+    "build:svg": "cd ./src/assets && node getSvg.cjs",
+    "build": "npm run build:clean && npm run build:types && npm run build:source",
+    "dev": "rollup --config rollup.config.js --watch",
+    "release": "yarn version && yarn build",
+    "modified:less": "lessc --js --modify-var='ant-prefix=portkey-ant' src/assets/theme/antd.less src/assets/theme/modified.antd.css",
+    "pub": "npm publish"
   },
   "peerDependencies": {
     "aelf-sdk": "^3.4.7"
   },
   "gitHead": "9ba1306de72b5035883d7b102fe84beb36b5e258",
+  "devDependencies": {
+    "@types/uuid": "^8.3.4",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "less": "^4.1.3",
+    "postcss": "^8.4.21"
+  },
   "dependencies": {
     "antd": "^5.19.4",
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "moment": "^2.29.4",
+    "query-string": "^7.1.1",
+    "react-qrcode-logo": "2.9.0",
+    "react-use": "^17.4.0",
+    "uuid": "^8.3.2"
   }
 }
