--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^12.2.4",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-url": "^8.0.1",
+    "@rollup/plugin-json": "^6.0.1",
     "@tsconfig/recommended": "^1.0.1",
     "@types/elliptic": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
