--- a/packages/next-example/package.json
+++ b/packages/next-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-example",
-  "version": "0.1.0",
+  "version": "0.0.2-alpha.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@portkey/detect-provider": "^2.0.0-alpha.2",
-    "@portkey/trader-core": "^0.0.1",
-    "@portkey/trader-react-ui": "^0.0.1",
-    "aelf-sdk": "^3.4.7",
-    "antd": "^5.19.3",
-    "clsx": "^2.1.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
     "@aelf-react/core": "^0.1.19",
     "@aelf-react/types": "^0.1.10",
     "@aelf-web-login/utils": "^0.1.3-alpha.12",
@@ -25,7 +16,16 @@
     "@aelf-web-login/wallet-adapter-night-elf": "^0.1.3-alpha.12",
     "@aelf-web-login/wallet-adapter-portkey-aa": "^0.1.3-alpha.12",
     "@aelf-web-login/wallet-adapter-portkey-discover": "^0.1.3-alpha.12",
-    "@aelf-web-login/wallet-adapter-react": "^0.1.3-alpha.12"
+    "@aelf-web-login/wallet-adapter-react": "^0.1.3-alpha.12",
+    "@portkey/detect-provider": "^2.0.0-alpha.2",
+    "@portkey/trader-core": "^0.0.2-alpha.0",
+    "@portkey/trader-react-ui": "^0.0.2-alpha.0",
+    "aelf-sdk": "^3.4.7",
+    "antd": "^5.19.3",
+    "clsx": "^2.1.1",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
