--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@portkey/trader-core",
-  "version": "0.0.1-alpha.12",
+  "version": "0.0.1-alpha.13",
   "description": "",
   "main": "./dist/commonjs/index.js",
   "module": "./dist/esm/index.js",
@@ -45,11 +45,12 @@
   },
   "dependencies": {
     "@portkey/contracts": "^2.7.1-alpha.4",
-    "@portkey/trader-services": "^0.0.1-alpha.12",
-    "@portkey/trader-types": "^0.0.1-alpha.12",
-    "@portkey/trader-utils": "^0.0.1-alpha.12",
+    "@portkey/trader-services": "^0.0.1-alpha.13",
+    "@portkey/trader-types": "^0.0.1-alpha.13",
+    "@portkey/trader-utils": "^0.0.1-alpha.13",
     "@portkey/types": "^2.7.1-alpha.4",
     "@portkey/utils": "^2.7.1-alpha.4",
     "bignumber.js": "^9.1.0"
-  }
+  },
+  "gitHead": "9d563d81e462108ba52bb77e4691e7c9b1e9a34e"
 }
