--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@portkey/trader-utils",
-  "version": "0.0.1-alpha.12",
+  "version": "0.0.1-alpha.13",
   "description": "",
   "main": "./dist/commonjs/index.js",
   "module": "./dist/esm/index.js",
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@awaken/sdk-core": "git+https://github.com/Awaken-Finance/sdk-core.git",
-    "@portkey/trader-types": "^0.0.1-alpha.12",
+    "@portkey/trader-types": "^0.0.1-alpha.13",
     "loadsh": "^0.0.4"
   },
   "devDependencies": {
@@ -51,5 +51,6 @@
   },
   "peerDependencies": {
     "aelf-sdk": "^3.4.7"
-  }
+  },
+  "gitHead": "9d563d81e462108ba52bb77e4691e7c9b1e9a34e"
 }
